# UseCase1

./: .gitignore  AnalyseQwik_FPR_202508.docx  OntologySnapshot.xlsx  Overzicht_PDC_Beroepse_202600611.xlsx  PRESENTATIE.md  README.md  Specificatie Flexibele premieovereenkomst 0.08.docx
.claude/agents/: business-analist.md  compliance-risico.md  context-analyst.md  data-ontologie.md  dod-composer.md  domain-interviewer.md  ontology-guardian.md  red-team-critic.md  requirements-engineer.md  technisch-architect.md  test-designer.md  vertaal-synthesizer.md
.claude/commands/: begrijpen.md  vertalen.md
agent-flow-skill/: README.md  install.sh
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: analysis.py  health.py  items.py
backend/app/core/: config.py
backend/app/schemas/: comparison.py  item.py
backend/app/services/: claude_analysis.py  documents.py  extraction.py  item_service.py  ontology.py  verification.py
backend/app/services/rag/: chunking.py  embeddings.py  index.py
backend/tests/: test_analysis.py  test_documents.py  test_health.py  test_items.py  test_rag.py  test_verification.py
docs/agent-flow/: status.yaml  traceability.yaml
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
output/: LEESMIJ.md
output/english/: README.md
scripts/: doc_tools.py
uploads/: _overrides.json
(+54 files in other folders)
